[package]
name = "sensor_lib_as5600"
version = "0.1.1"
authors = ["Jake Goodwin <jakegoodwin@gorge.works>"]
edition = "2021"
categories = ["embedded", "hardware-support", "no-std", "embedded-hal"]
description = "A driver for the AS5600 sensor module."
readme = "README.md"
keywords = ["embedded-hal-driver", "sensor", "magnetic", "rotary", "encoder"]
license = "BSD-3-Clause"
repository = "https://github.com/jake-g00dwin/sensor_lib_as5600"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# This should be correct
[dependencies]
embedded-hal = "1.0.0"

# Suff that only get's included for examples, tests and benchmarks
[dev-dependencies]
embedded-hal-mock = "0.11.1"

#For future use: this will help with the transision from 0.2.7 --> 1.0.0
#[patch.crates-io]
#embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal", features = ["eh1"]}
